# projeto-tcc

./: pyproject.toml  result.csv  result.json
tcc/: scraping.py  stream_to_power_bi.py  streaming.py
