[tool.poetry]
name = "tcc"
version = "0.1.0"
description = ""
authors = ["joão pedro carneiro de almeida <joaopcaalmeida@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
selenium = "^4.16.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
statsmodels = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
